EDELIVERY-1664 including sonar for integration